# MNN

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  conanfile.txt
cmake/: oneDNN.cmake
source/backend/arm82/: Arm82Functions.cpp  CMakeLists.txt
source/backend/cpu/: CPURuntime.cpp  UnaryUtils.hpp
source/backend/cpu/arm/: FunctionSummary.hpp
source/backend/cpu/arm/arm32/bf16/: MNNGelu_BF16.S
source/backend/cpu/bf16/: BF16Functions.cpp
source/backend/cuda/: CMakeLists.txt
source/backend/tensorrt/: CMakeLists.txt
source/math/: Vec.hpp
